# chstides

./: .devcontainer.json  .envrc  .gitignore  .ruff.toml  CLAUDE.md  Makefile  README.md  hacs.json  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml  cron.yml  validate.yml
config/: configuration.yaml
custom_components/chstides/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/chstides/translations/: en.json
docs/superpowers/plans/: 2026-04-07-cantides-implementation.md  2026-04-08-blueprint-alignment.md  2026-04-08-chstides-library-migration.md  2026-04-08-wlp-fallback.md
docs/superpowers/specs/: 2026-04-07-cantides-design.md  2026-04-08-blueprint-alignment-design.md  2026-04-08-chstides-library-migration-design.md  2026-04-08-wlp-fallback-design.md
scripts/: dev_instance.sh  develop  lint  setup  test
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_sensor.py
